# home-task

./: Cargo.toml  Dockerfile  LICENSE  README.md  demo.sh  docker-compose.yml  justfile  otel-collector-config.yaml
demo/: index.html
src/: config.rs  lib.rs  main.rs  models.rs
tests/: api_test.rs  integration_test.rs
