[package]
name = "home-task"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }

# Kafka
rdkafka = { version = "0.38.0", features = ["tokio", "cmake-build"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Utilities
anyhow = "1.0.100"
dotenvy = "0.15.7"
rand = "0.9.2"  # For generating random values

# Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32.1"

# OpenTelemetry
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace"], default-features = false }

# Metrics
prometheus = "0.14.0"
